= HEAD

  * Support for node 0.6.

  * Removed dependency on gzbz2 in favor of native zlib support in node.

  * Removed utils.strftime in favor of strftime package.

  * Refactored BufferedStream into its own module.

  * Added remoteUser environment variable when using basic auth.

= 0.7.0 / 2011-10-30

  * Provide as much information as possible in the default error handler for
    errors that do not have a proper stack trace.

  * Added remoteAddr and remotePort environment variables.

  * Reversed order of arguments to Response constructor.

  * Values in Response#headers are always strings.

  * Don't send the old cookie value when removing cookies.

  * Extracted base error class into its own package.

  * Removed view module.

= 0.6.1 / 2011-10-08

  * Removed Error#fullStack and fixed a bug with printing stack traces for
    errors that do not inherit from Error.

= 0.6.0 / 2011-10-05

  * Added view module (supports erb-style templating).

  * Permit a function to be used as the second argument to strata.run.

  * Added option to prevent server from writing to console on startup.

  * Clarified the use of the serverName and serverPort environment variables.

  * Eliminated use of the SERVER_PORT and HTTPS process environment variables.

  * Added rationale to README.

= 0.5.14 / 2011-10-03

  * Added startup message to strata.run.

  * Fixed a regression in strata.handleError.

  * Reworked manual code examples to use strata.run.

= 0.5.13 / 2011-09-30

  * Fixed a regression in strata.createServer.

= 0.5.12 / 2011-09-29

  * Added directory middleware.

= 0.5.11 / 2011-09-27

  * Set Content-Type/Length in error responses from basic auth middleware.

  * Added cascade middleware.

  * Explicitly set "Transfer-Encoding: chunked" for stream response bodies.

  * Removed X-Cascade from utils.notFound.

  * Added "X-Cascade: pass" support to strata.Router. A response containing this
    header will be ignored and subsequent routes will be tried.
