@@ -1,5 +1,5 @@
-var strata = require("./index"),
-    utils = require("./utils");
+var util = require("util"),
+    strata = require("./index");
 
 /**
  * Provides URL rewriting behavior similar to Apache's mod_rewrite. All requests
@@ -11,7 +11,7 @@ module.exports = function (app, pattern, replacement) {
         pattern = new RegExp("^" + pattern + "$");
     }
 
-    if (!utils.isRe(pattern)) {
+    if (!util.isRegExp(pattern)) {
         throw new strata.Error("Pattern must be a RegExp");
     }
 
