@@ -1,4 +1,5 @@
-var strata = require("./index"),
+var util = require("util"),
+    strata = require("./index"),
     utils = require("./utils");
 
 module.exports = Router;
@@ -39,7 +40,7 @@ Router.prototype.route = function route(pattern, app, methods) {
         pattern = compileRoute(pattern, keys);
     }
 
-    if (!utils.isRe(pattern)) {
+    if (!util.isRegExp(pattern)) {
         throw new strata.Error("Pattern must be a RegExp");
     }
 
