@@ -9,7 +9,6 @@ exports.reverseHttpPropertyName = reversePropertyName;
 exports.byteSizeFormat = byteSizeFormat;
 exports.escapeHtml = escapeHtml;
 exports.escapeRe = escapeRe;
-exports.isRe = isRe;
 exports.isEmptyObject = isEmptyObject;
 exports.compareLength = compareLength;
 exports.sortByLength = sortByLength;
@@ -143,13 +142,6 @@ function escapeHtml(string) {
  */
 function escapeRe(string) {
     return String(string).replace(/([.?*+^$[\]\\(){}-])/g, "\\$1");
-}
-
-/**
- * Returns `true` if the given `obj` is a RegExp.
- */
-function isRe(obj) {
-    return Object.prototype.toString.call(obj) == "[object RegExp]";
 }
 
 /**
